fix stretched album covers

--- a/src/App/Playlist/Tracklist/TrackContainer/AlbumCover/AlbumCover.scss
+++ b/src/App/Playlist/Tracklist/TrackContainer/AlbumCover/AlbumCover.scss
@@ -40,6 +40,7 @@
 
   .album-cover {
     width: 80px;
+    height: 80px;
     border-radius: 100%;
     transition: 0.25s cubic-bezier(0.165, 0.84, 0.44, 1);
   }
